Removed target=_blank that brakes sound and canvas. Created event to pause sound when the focus it's lost.

--- a/index.html
+++ b/index.html
@@ -100,17 +100,17 @@
                     <!-- Social Icon  -->
                     <ul class="navbar-nav nav-flex-icons">
                         <li class="nav-item">
-                            <a class="nav-link" href="pdf/cv/CV.pdf" target="_blank">
+                            <a class="nav-link" href="pdf/cv/CV.pdf">
                                 <i class="far fa-file-pdf" aria-hidden="true"></i>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://github.com/MinionAttack" target="_blank">
+                            <a class="nav-link" href="https://github.com/MinionAttack">
                                 <i class="fab fa-github" aria-hidden="true"></i>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://www.linkedin.com/in/iago-alonso-alonso-9ab854110" target="_blank">
+                            <a class="nav-link" href="https://www.linkedin.com/in/iago-alonso-alonso-9ab854110">
                                 <i class="fab fa-linkedin" aria-hidden="true"></i>
                             </a>
                         </li>
@@ -184,7 +184,7 @@
                     <div class="col-md-4 mb-5">
                         <i class="fas fa-graduation-cap fa-4x orange-text"></i>
                         <h4 class="my-4 font-weight-bold">
-                            <a href="https://www.fic.udc.es/es/plan-de-estudios" target="_blank">
+                            <a href="https://www.fic.udc.es/es/plan-de-estudios">
                                 Degree in Computer Science
                             </a>
                         </h4>
@@ -196,7 +196,7 @@
                     <div class="col-md-4 mb-1">
                         <i class="fas fa-graduation-cap fa-4x orange-text"></i>
                         <h4 class="my-4 font-weight-bold">
-                            <a href="https://www.fic.udc.es/es/muei" target="_blank">
+                            <a href="https://www.fic.udc.es/es/muei">
                                 Master Degree in Computer Science
                             </a>
                         </h4>
@@ -208,7 +208,7 @@
                     <div class="col-md-4 mb-1">
                         <i class="fas fa-music fa-4x orange-text"></i>
                         <h4 class="my-4 font-weight-bold">
-                            <a href="http://www.aguarda.es/servizos-municipais/educacion/conservatorio/" target="_blank">
+                            <a href="http://www.aguarda.es/servizos-municipais/educacion/conservatorio/">
                                 Elementary Degree of Music
                             </a>
                         </h4>
@@ -253,7 +253,7 @@
 
                         <div class="view zoom z-depth-1-half">
                             <img src="img/jobs/indra-logo.jpg" class="img-fluid" alt="">
-                            <a href="https://www.indracompany.com/en" target="_blank">
+                            <a href="https://www.indracompany.com/en">
                                 <div class="mask waves-effect waves-light"></div>
                             </a>
                         </div>
@@ -269,7 +269,7 @@
 
                         <div class="view zoom z-depth-1-half">
                             <img src="img/jobs/lys-logo.png" class="img-fluid" alt="">
-                            <a href="http://www.grupolys.org/lys_en.html" target="_blank">
+                            <a href="http://www.grupolys.org/lys_en.html">
                                 <div class="mask waves-effect waves-light"></div>
                             </a>
                         </div>
@@ -286,7 +286,7 @@
 
                         <div class="view zoom z-depth-1-half">
                             <img src="img/jobs/oesia-logo.jpg" class="img-fluid" alt="">
-                            <a href="http://grupooesia.com/" target="_blank">
+                            <a href="http://grupooesia.com/">
                                 <div class="mask waves-effect waves-light"></div>
                             </a>
                         </div>
@@ -309,7 +309,7 @@
 
                         <div class="view zoom z-depth-1-half">
                             <img src="img/jobs/enxenio-logo.png" class="img-fluid" alt="">
-                            <a href="https://www.enxenio.es/" target="_blank">
+                            <a href="https://www.enxenio.es/">
                                 <div class="mask waves-effect waves-light"></div>
                             </a>
                         </div>
@@ -325,7 +325,7 @@
 
                         <div class="view zoom z-depth-1-half">
                             <img src="img/jobs/sia-logo.png" class="img-fluid" alt="">
-                            <a href="http://www.sia.es/" target="_blank">
+                            <a href="http://www.sia.es/">
                                 <div class="mask waves-effect waves-light"></div>
                             </a>
                         </div>
@@ -377,22 +377,22 @@
                         </h4>
                         <p class="blue-grey-text">
                             This paper is the result of my work done as a <strong>PhD research assistant</strong> of the PhD
-                            <a href="http://www.grupolys.org/~david.vilares/" target="_blank">
+                            <a href="http://www.grupolys.org/~david.vilares/">
                                 <strong>David Vilares Calvo</strong>
                             </a>
                             at <strong>Group LYS</strong>. This paper was directed and supervised by the PhD
-                            <a href="http://www.grupolys.org/~cgomezr/" target="_blank">
+                            <a href="http://www.grupolys.org/~cgomezr/">
                                 <strong>Carlos Gómez Rodríguez</strong>
                             </a>.
                         </p>
 
                         <p class="blue-grey-text">
                             The final draft it's avaliable at
-                            <a href="https://arxiv.org/abs/1706.02141" target="_blank">
+                            <a href="https://arxiv.org/abs/1706.02141">
                                 <strong>Cornell University</strong>
                             </a>.
                             You can find the published version of the paper and buy it at
-                            <a href="https://link.springer.com/article/10.1007%2Fs10462-017-9584-0" target="_blank">
+                            <a href="https://link.springer.com/article/10.1007%2Fs10462-017-9584-0">
                                 <strong>Springer</strong>
                             </a>.
 
@@ -435,12 +435,12 @@
                     <!--Grid column-->
                     <div class="col-lg-4 col-md-12 mb-4">
 
-                        <a href="pdf/letters/letter-carlos.pdf" target="_blank">
+                        <a href="pdf/letters/letter-carlos.pdf">
                             <i class="far fa-envelope fa-5x orange-text"></i>
                         </a>
 
                         <h4 class="my-4 font-weight-bold">
-                            <a href="http://pdi.udc.es/en/File/Pdi/ZU9BH" target="_blank">
+                            <a href="http://pdi.udc.es/en/File/Pdi/ZU9BH">
                                 PhD Carlos Gómez Rodríguez
                             </a>
                         </h4>
@@ -451,12 +451,12 @@
                     <!--Grid column-->
                     <div class="col-lg-4 col-md-6 mb-4">
 
-                        <a href="pdf/letters/letter-david.pdf" target="_blank">
+                        <a href="pdf/letters/letter-david.pdf">
                             <i class="far fa-envelope fa-5x orange-text"></i>
                         </a>
 
                         <h4 class="my-4 font-weight-bold">
-                            <a href="http://www.grupolys.org/~david.vilares/" target="_blank">
+                            <a href="http://www.grupolys.org/~david.vilares/">
                                 <strong>PhD David Vilares Calvo</strong>
                             </a>
                         </h4>
@@ -467,12 +467,12 @@
                     <!--Grid column-->
                     <div class="col-lg-4 col-md-6 mb-4">
 
-                        <a href="pdf/letters/letter-luaces.pdf" target="_blank">
+                        <a href="pdf/letters/letter-luaces.pdf">
                             <i class="far fa-envelope fa-5x orange-text"></i>
                         </a>
 
                         <h4 class="my-4 font-weight-bold">
-                            <a href="http://pdi.udc.es/en/File/Pdi/6U69E" target="_blank">
+                            <a href="http://pdi.udc.es/en/File/Pdi/6U69E">
                                 PhD Miguel Ángel Rodríguez Luaces
                             </a>
                         </h4>
@@ -514,12 +514,12 @@
                     <!--Grid column-->
                     <div class="col-lg-4 col-md-4 mb-4">
 
-                        <a href="pdf/certificates/MiriadaX-HCFO.pdf" target="_blank">
+                        <a href="pdf/certificates/MiriadaX-HCFO.pdf">
                             <i class="fas fa-certificate fa-5x orange-text"></i>
                         </a>
 
                         <h4 class="my-4 font-weight-bold">
-                            <a href="https://miriadax.net/home" target="_blank">
+                            <a href="https://miriadax.net/home">
                                 <strong>Development in HTML5, CSS and Javascript of WebApps, including FirefoxOS* phones</strong>
                             </a>
                         </h4>
@@ -530,12 +530,12 @@
                     <!--Grid column-->
                     <div class="col-lg-4 col-md-4 mb-4">
 
-                        <a href="pdf/certificates/HCAHW-Certificate.pdf" target="_blank">
+                        <a href="pdf/certificates/HCAHW-Certificate.pdf">
                             <i class="fas fa-certificate fa-5x orange-text"></i>
                         </a>
 
                         <h4 class="my-4 font-weight-bold">
-                            <a href="https://thesecuritysentinel.es/curso/curso-auditoria-hacking-web/" target="_blank">
+                            <a href="https://thesecuritysentinel.es/curso/curso-auditoria-hacking-web/">
                                 <strong>Audit and web hacking course</strong>
                             </a>
                         </h4>
@@ -546,12 +546,12 @@
                     <!--Grid column-->
                     <div class="col-lg-4 col-md-4 mb-4">
 
-                        <a href="pdf/certificates/SCRUMstudy-Certificate.pdf" target="_blank">
+                        <a href="pdf/certificates/SCRUMstudy-Certificate.pdf">
                             <i class="fas fa-certificate fa-5x orange-text"></i>
                         </a>
 
                         <h4 class="my-4 font-weight-bold">
-                            <a href="https://www.scrumstudy.com/certification/scrum-fundamentals-certified" target="_blank">
+                            <a href="https://www.scrumstudy.com/certification/scrum-fundamentals-certified">
                                 <strong>Scrum Fundamentals Certified</strong>
                             </a>
                         </h4>
@@ -804,7 +804,7 @@
                 <div class="row">
                     <!--Grid column-->
                     <div class="col-md-12">
-                        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/WBw8OcIYQMg" frameborder="0"
+                        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/WBw8OcIYQMg" style="border: 0;"
                                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                             Sorry, your browser does not support inline frames.
                         </iframe>
@@ -893,23 +893,23 @@
 
                             <!--Grid column-->
                             <div class="col-md-4">
-                                <dt>Adblock Plus <a href="https://adblockplus.org" target="_blank"> <span>(Site)</span> </a> </dt>
-                                <dd><a href="https://crowdin.com/" target="_blank"> <span>Crowdin</span> </a></dd>
+                                <dt>Adblock Plus <a href="https://adblockplus.org"> <span>(Site)</span> </a> </dt>
+                                <dd><a href="https://crowdin.com/"> <span>Crowdin</span> </a></dd>
                             </div>
                             <!--Grid column-->
 
                             <!--Grid column-->
                             <div class="col-md-4">
-                                <dt>Episode Calendar <a href="https://episodecalendar.com" target="_blank"> <span>(Site)</span> </a> </dt>
-                                <dd><a href="https://www.transifex.com/" target="_blank"> <span>Transifex</span> </a> </dd>
-                                <dd><a href="https://weblate.org" target="_blank"> <span>Weblate</span> </a> </dd>
+                                <dt>Episode Calendar <a href="https://episodecalendar.com"> <span>(Site)</span> </a> </dt>
+                                <dd><a href="https://www.transifex.com/"> <span>Transifex</span> </a> </dd>
+                                <dd><a href="https://weblate.org"> <span>Weblate</span> </a> </dd>
                             </div>
                             <!--Grid column-->
 
                             <!--Grid column-->
                             <div class="col-md-4">
-                                <dt>Popcorn Time <a href="https://popcorntime.sh" target="_blank"> <span>(Site)</span> </a> </dt>
-                                <dd><a href="https://www.transifex.com/" target="_blank"> <span>Transifex</span> </a> </dd>
+                                <dt>Popcorn Time <a href="https://popcorntime.sh"> <span>(Site)</span> </a> </dt>
+                                <dd><a href="https://www.transifex.com/"> <span>Transifex</span> </a> </dd>
                             </div>
                             <!--Grid column-->
 
@@ -944,16 +944,16 @@
                         <!-- Form contact -->
                         <form class="p-5">
                             <div class="md-form form-sm"> <i class="fas fa-user prefix grey-text"></i>
-                                <input type="text" id="contactNameInput" placeholder="Your name" class="form-control form-control-sm">
+                                <label for="contactNameInput"></label><input type="text" id="contactNameInput" placeholder="Your name" class="form-control form-control-sm">
                             </div>
                             <div class="md-form form-sm"> <i class="fas fa-envelope prefix grey-text"></i>
-                                <input type="text" id="contactEmailInput" placeholder="Your email" class="form-control form-control-sm">
+                                <label for="contactEmailInput"></label><input type="text" id="contactEmailInput" placeholder="Your email" class="form-control form-control-sm">
                             </div>
                             <div class="md-form form-sm"> <i class="fas fa-tag prefix grey-text"></i>
-                                <input type="text" id="contactSubjectInput" placeholder="Subject" class="form-control form-control-sm">
+                                <label for="contactSubjectInput"></label><input type="text" id="contactSubjectInput" placeholder="Subject" class="form-control form-control-sm">
                             </div>
                             <div class="md-form form-sm"> <i class="fas fa-pencil-alt prefix grey-text"></i>
-                                <textarea id="contactMessageInput" placeholder="Your message" class="md-textarea custom-textarea form-control form-control-sm" rows="4"></textarea>
+                                <label for="contactMessageInput"></label><textarea id="contactMessageInput" placeholder="Your message" class="md-textarea custom-textarea form-control form-control-sm" rows="4"></textarea>
                             </div>
                             <div class="text-center mt-4">
                                 <button class="btn btn-primary" onclick="sendMail(); return false">Send<i class="fas fa-paper-plane ml-1"></i></button>
@@ -1018,7 +1018,7 @@
         <!--Copyright-->
         <div class="footer-copyright py-3 text-center">
             This personal web was made following the tutorial from
-            <a href="https://mdbootstrap.com/bootstrap-tutorial/" target="_blank"> MDBootstrap.com </a>
+            <a href="https://mdbootstrap.com/bootstrap-tutorial/"> MDBootstrap.com </a>
             with some custom addons to learn more JavaScript and make the site a bit more cool.
         </div>
         <!--/.Copyright-->
