Updated MDB to 4.8.3 and remove possibility to open the developer console by keyboard or right click (thanks to a great friend and ex-coworker)

--- a/index.html
+++ b/index.html
@@ -18,24 +18,24 @@
     <link rel='shortcut icon' type='image/x-icon' href='img/favicon.ico' />
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <!-- Bootstrap core CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.0/css/mdb.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.3/css/mdb.min.css" rel="stylesheet">
     <!-- Audio Player -->
     <link rel="stylesheet" href="css/AetherPlayer.css">
     <!-- Custom styles -->
     <link rel="stylesheet" href="css/style.css">
 
     <!-- JQuery -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <!-- Bootstrap tooltips -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
     <!-- Bootstrap core JavaScript -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.0/js/mdb.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.3/js/mdb.min.js"></script>
     <!-- Bowser -->
     <script type="text/javascript" src="js/bowser.js"></script>
     <!-- Audio Player -->
@@ -46,7 +46,7 @@
     <script src="https://maps.google.com/maps/api/js?key=AIzaSyDCVDXgGFo9vGR0zl__uVttMCkhfhoWnAQ&region=ES&callback=showMap" defer></script>
 </head>
 
-<body>
+<body oncontextmenu="return false" onkeydown="return false">
     <!--Main Navigation-->
     <header>
         <!--Navbar-->
