--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             <a class="nav-link" href="#projectColaborations">Colaborations</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#contact">Contact</a>
+                            <a class="nav-link" href="#location">Location</a>
                         </li>
                     </ul>
                     <!-- Links -->
@@ -864,12 +864,12 @@
                                 <!--/First slide-->
                                 <!--Second slide-->
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="img/collaborations/ep-logo.jpg" alt="Second slide">
+                                    <img class="d-block w-100" src="img/collaborations/pct-logo.png" alt="Second slide">
                                 </div>
                                 <!--/Second slide-->
                                 <!--Third slide-->
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="img/collaborations/pct-logo.png" alt="Third slide">
+                                    <img class="d-block w-100" src="img/collaborations/ep-logo.jpg" alt="Third slide">
                                 </div>
                                 <!--/Third slide-->
                             </div>
@@ -942,8 +942,8 @@
 
             <hr class="my-5">
 
-            <!--Section: Contact-->
-            <section id="contact">
+            <!--Section: Location-->
+            <section id="location">
 
                 <!-- Heading -->
                 <h2 class="mb-5 font-weight-bold text-center">
@@ -956,31 +956,12 @@
                 <div class="row">
 
                     <!--Grid column-->
-                    <div class="col-lg-5 col-md-12">
-                        <!-- Form contact -->
-                        <form class="p-5">
-                            <div class="md-form form-sm"> <i class="fas fa-user prefix grey-text"></i>
-                                <label for="contactNameInput"></label><input type="text" id="contactNameInput" placeholder="Your name" class="form-control form-control-sm">
-                            </div>
-                            <div class="md-form form-sm"> <i class="fas fa-envelope prefix grey-text"></i>
-                                <label for="contactEmailInput"></label><input type="text" id="contactEmailInput" placeholder="Your email" class="form-control form-control-sm">
-                            </div>
-                            <div class="md-form form-sm"> <i class="fas fa-tag prefix grey-text"></i>
-                                <label for="contactSubjectInput"></label><input type="text" id="contactSubjectInput" placeholder="Subject" class="form-control form-control-sm">
-                            </div>
-                            <div class="md-form form-sm"> <i class="fas fa-pencil-alt prefix grey-text"></i>
-                                <label for="contactMessageInput"></label><textarea id="contactMessageInput" placeholder="Your message" class="md-textarea custom-textarea form-control form-control-sm" rows="4"></textarea>
-                            </div>
-                            <div class="text-center mt-4">
-                                <button class="btn btn-primary" onclick="sendMail(); return false">Send<i class="fas fa-paper-plane ml-1"></i></button>
-                            </div>
-                        </form>
-                        <!-- Form contact -->
+                    <div class="col-lg-3 col-md-3">
                     </div>
-                    <!--Grid column-->
+                    <!--Grid row-->
 
                     <!--Grid column-->
-                    <div class="col-lg-7 col-md-12">
+                    <div class="col-lg-6 col-md-6">
 
                         <!--Google map-->
                         <div id="map-container" class="z-depth-1-half map-container mb-5" style="height: 400px"></div>
@@ -988,11 +969,16 @@
                     </div>
                     <!--Grid column-->
 
+                    <!--Grid column-->
+                    <div class="col-lg-3 col-md-3">
+                    </div>
+                    <!--Grid row-->
+
                 </div>
                 <!--Grid row-->
 
             </section>
-            <!--Section: Contact-->
+            <!--Section: Location-->
 
         </div>
     </main>
@@ -1025,7 +1011,7 @@
 
                 <p>
                     If you want to know the reason of the name of the website, are looking for a employee or whatever don't
-                    be shy and send me an email or contact me by LinkedIn!
+                    be shy and contact me by LinkedIn!
                 </p>
             </div>
         </div>
