Add 'Courses' section and update MDB to 4.8.7

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Bootstrap core CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.3/css/mdb.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.7/css/mdb.min.css" rel="stylesheet">
     <!-- Audio Player -->
     <link rel="stylesheet" href="css/AetherPlayer.css">
     <!-- Custom styles -->
@@ -35,7 +35,7 @@
     <!-- Bootstrap core JavaScript -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.3/js/mdb.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.7/js/mdb.min.js"></script>
     <!-- Bowser -->
     <script type="text/javascript" src="js/bowser.js"></script>
     <!-- Audio Player -->
@@ -84,6 +84,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#certifications">Certifications</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#courses">Courses</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#events">Events</a>
@@ -581,7 +584,113 @@
             <!--Section: Certifications-->
 
             <hr class="my-5">
-            
+
+            <!--Section: Courses-->
+            <section id="courses" class="text-center">
+
+                <!-- Heading -->
+                <h2 class="mb-5 font-weight-bold">Courses</h2>
+
+                <!--Grid row-->
+                <div class="row d-flex justify-content-center mb-4">
+
+                    <!--Grid column-->
+                    <div class="col-md-8">
+
+                        <!-- Description -->
+                        <p class="blue-grey-text">Here you can find all the courses I have done, either out of curiosity to learn something new or because I found an offer and I ventured to buy them to see how use the tool that i'ts explained in the course.</p>
+
+                    </div>
+                    <!--Grid column-->
+
+                </div>
+                <!--Grid row-->
+
+                <!--Grid row-->
+                <div class="row">
+
+                    <!--Grid column-->
+                    <div class="col-lg-4 col-md-4 mb-4">
+
+                        <i class="fas fa-book-open fa-5x orange-text"></i>
+
+                        <h4 class="my-4 font-weight-bold">
+                            <a href="https://stackskills.com/p/azure-az101">
+                                <strong>AZ-101 Microsoft Azure Integration and Security Exam Prep</strong>
+                            </a>
+                        </h4>
+
+                        <dt>
+                            Instructor: <a href="https://softwarearchitect.ca/scott/">Scott Duffy</a>
+                        </dt>
+
+                    </div>
+                    <!--Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-lg-4 col-md-4 mb-4">
+
+                        <i class="fas fa-book-open fa-5x orange-text"></i>
+
+                        <h4 class="my-4 font-weight-bold">
+                            <a href="https://stackskills.com/p/azure-az100">
+                                <strong>AZ-103 Azure Administrator Exam</strong>
+                            </a>
+                        </h4>
+
+                        <dt>
+                            Instructor: <a href="https://softwarearchitect.ca/scott/">Scott Duffy</a>
+                        </dt>
+                        <dd>
+                            Graduation certificate ID: cert_pj79hlgq
+                        </dd>
+
+                    </div>
+                    <!--Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-lg-4 col-md-4 mb-4">
+
+                        <i class="fas fa-book-open fa-5x orange-text"></i>
+
+                        <h4 class="my-4 font-weight-bold">
+                            <a href="https://stackskills.com/p/azure-az203">
+                                <strong>AZ-203 Developing Solutions for Microsoft Azure Exam Prep</strong>
+                            </a>
+                        </h4>
+
+                        <dt>
+                            Instructor: <a href="https://softwarearchitect.ca/scott/">Scott Duffy</a>
+                        </dt>
+
+                    </div>
+                    <!--Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-lg-4 col-md-4 mb-4">
+
+                        <i class="fas fa-book-open fa-5x orange-text"></i>
+
+                        <h4 class="my-4 font-weight-bold">
+                            <a href="https://stackskills.com/p/azure-az300">
+                                <strong>AZ-300 Azure Architecture Technologies Certification Exam</strong>
+                            </a>
+                        </h4>
+
+                        <dt>
+                            Instructor: <a href="https://softwarearchitect.ca/scott/">Scott Duffy</a>
+                        </dt>
+
+                    </div>
+                    <!--Grid column-->
+
+                </div>
+                <!--Grid row-->
+            </section>
+            <!--Section: Certifications-->
+
+            <hr class="my-5">
+
             <!--Section: Events-->
             <section id="events" class="text-center">
 
