Updated MDB and Font Awesome. Removed two href empty tags and fixed the missing playmode icons for repeat and order modes

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <link rel='shortcut icon' type='image/x-icon' href='img/favicon.ico' />
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <!-- Bootstrap core CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.7/css/mdb.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/css/mdb.min.css" rel="stylesheet">
     <!-- Audio Player -->
     <link rel="stylesheet" href="css/AetherPlayer.css">
     <!-- Custom styles -->
@@ -35,7 +35,7 @@
     <!-- Bootstrap core JavaScript -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.7/js/mdb.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/js/mdb.min.js"></script>
     <!-- Bowser -->
     <script type="text/javascript" src="js/bowser.js"></script>
     <!-- Audio Player -->
@@ -771,7 +771,7 @@
                     <div class="col-md-6">
 
                         <!--Excerpt-->
-                        <a href="" class="teal-text">
+                        <a class="teal-text">
                             <h6 class="pb-1"><i class="fas fa-paint-brush"></i><strong> See some photos and all the talks that I have attended. </strong></h6>
                         </a>
                         <h4 class="mb-3"><strong>Codemotion Madrid 2018</strong></h4>
@@ -1003,7 +1003,7 @@
                     <div class="col-md-6">
 
                         <!--Excerpt-->
-                        <a href="" class="teal-text">
+                        <a class="teal-text">
                             <h6 class="pb-1"><i class="fas fa-paint-brush"></i><strong> A brief summary of what I do on them. </strong></h6>
                         </a>
                         <h4 class="mb-3"><strong>Expanding the projects to reach more people</strong></h4>
