--- a/index.html
+++ b/index.html
@@ -577,6 +577,38 @@
 
                     </div>
                     <!--Grid column-->
+                    
+                    <!--Grid column-->
+                    <div class="col-lg-4 col-md-4 mb-4">
+
+                        <a href="pdf/certificates/GoogleActivate-CloudComputing.pdf">
+                            <span class="fas fa-certificate fa-5x orange-text" aria-hidden="true"></span>
+                        </a>
+
+                        <h4 class="my-4 font-weight-bold">
+                            <a href="https://learndigital.withgoogle.com/activate/course/cloud-computing">
+                                <strong>Cloud Computing</strong>
+                            </a>
+                        </h4>
+
+                    </div>
+                    <!--Grid column-->
+                    
+                    <!--Grid column-->
+                    <div class="col-lg-4 col-md-4 mb-4">
+
+                        <a href="pdf/certificates/GoogleActivate-MobileApps.pdf">
+                            <span class="fas fa-certificate fa-5x orange-text" aria-hidden="true"></span>
+                        </a>
+
+                        <h4 class="my-4 font-weight-bold">
+                            <a href="https://learndigital.withgoogle.com/activate/course/apps">
+                                <strong>Mobile Apps Development</strong>
+                            </a>
+                        </h4>
+
+                    </div>
+                    <!--Grid column-->
 
                 </div>
                 <!--Grid row-->
