Add more Google Activate certificates

--- a/index.html
+++ b/index.html
@@ -610,6 +610,38 @@
                     </div>
                     <!--Grid column-->
 
+                    <!--Grid column-->
+                    <div class="col-lg-4 col-md-4 mb-4">
+
+                        <a href="pdf/certificates/GoogleActivate-WebDevelopmentIntroduction-1.pdf">
+                            <span class="fas fa-certificate fa-5x orange-text" aria-hidden="true"></span>
+                        </a>
+
+                        <h4 class="my-4 font-weight-bold">
+                            <a href="https://learndigital.withgoogle.com/activate/course/web-development-I">
+                                <strong>Web Development Introduction (1/2)</strong>
+                            </a>
+                        </h4>
+
+                    </div>
+                    <!--Grid column-->                   
+ 
+                     <!--Grid column-->
+                    <div class="col-lg-4 col-md-4 mb-4">
+
+                        <a href="pdf/certificates/GoogleActivate-WebDevelopmentIntroduction-2.pdf">
+                            <span class="fas fa-certificate fa-5x orange-text" aria-hidden="true"></span>
+                        </a>
+
+                        <h4 class="my-4 font-weight-bold">
+                            <a href="https://learndigital.withgoogle.com/activate/course/web-development-II">
+                                <strong>Web Development Introduction (2/2)</strong>
+                            </a>
+                        </h4>
+
+                    </div>
+                    <!--Grid column-->   
+ 
                 </div>
                 <!--Grid row-->
             </section>
