--- a/index.html
+++ b/index.html
@@ -1237,8 +1237,7 @@
                 </p>
 
                 <p>
-                    If you want to know the reason of the name of the website, are looking for a employee or whatever don't
-                    be shy and contact me by LinkedIn!
+                    If you want to know the reason for the name of the website, are you looking for an employee or whatever, don't be shy and contact me on LinkedIn!
                 </p>
             </div>
         </div>
