--- a/index.html
+++ b/index.html
@@ -18,26 +18,26 @@
     <link rel='shortcut icon' type='image/x-icon' href='img/favicon.ico' />
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <!-- Google Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
     <!-- Bootstrap core CSS -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.15.0/css/mdb.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
     <!-- Audio Player -->
     <link rel="stylesheet" href="css/AetherPlayer.css">
     <!-- Custom styles -->
     <link rel="stylesheet" href="css/style.css">
 
     <!-- JQuery -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Bootstrap tooltips -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
     <!-- Bootstrap core JavaScript -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.15.0/js/mdb.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"></script>
     <!-- Bowser -->
     <script type="text/javascript" src="js/bowser.js"></script>
     <!-- Audio Player -->
@@ -94,7 +94,7 @@
                             <a class="nav-link" href="#events">Events</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#projectColaborations">Colaborations</a>
+                            <a class="nav-link" href="#projectCollaborations">Collaborations</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#location">Location</a>
@@ -1049,8 +1049,8 @@
             
             <hr class="my-5">
             
-            <!--Section: Project colaborations-->
-            <section id="projectColaborations">
+            <!--Section: Project collaborations-->
+            <section id="projectCollaborations">
 
                 <!-- Heading -->
                 <h2 class="mb-5 font-weight-bold text-center">Collaborations in projects</h2>
@@ -1165,7 +1165,7 @@
                 <!--Grid row-->
 
             </section>
-            <!--Section: Project colaborations-->
+            <!--Section: Project collaborations-->
 
             <hr class="my-5">
 
@@ -1237,7 +1237,7 @@
                 </p>
 
                 <p>
-                    If you want to know the reason for the name of the website, are you looking for an employee or whatever, don't be shy and contact me on LinkedIn!
+                    If you want to know the reason for the name of the website, you are looking for an employee or whatever, don't be shy and contact me on LinkedIn!
                 </p>
             </div>
         </div>
