Added the skeleton of the new songs and corrected a visual detail.

--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
 
                     <h4 class="my-4 font-weight-bold">
                         <a href="http://pdi.udc.es/en/File/Pdi/ZU9BH" rel="noopener noreferrer" target="_blank">
-                            PhD Carlos Gómez Rodríguez
+                            <strong>PhD Carlos Gómez Rodríguez</strong>
                         </a>
                     </h4>
 
@@ -482,7 +482,7 @@
 
                     <h4 class="my-4 font-weight-bold">
                         <a href="http://pdi.udc.es/en/File/Pdi/6U69E" rel="noopener noreferrer" target="_blank">
-                            PhD Miguel Ángel Rodríguez Luaces
+                            <strong>PhD Miguel Ángel Rodríguez Luaces</strong>
                         </a>
                     </h4>
 
