Corrected a visual detail.

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     <span aria-hidden="true" class="fas fa-graduation-cap fa-4x orange-text"></span>
                     <h4 class="my-4 font-weight-bold">
                         <a href="https://www.fic.udc.es/es/plan-de-estudios" rel="noopener noreferrer" target="_blank">
-                            Degree in Computer Science
+                            <strong>Degree in Computer Science</strong>
                         </a>
                     </h4>
                     <p class="blue-grey-text">Mention in Software development.</p>
@@ -205,7 +205,7 @@
                     <span aria-hidden="true" class="fas fa-graduation-cap fa-4x orange-text"></span>
                     <h4 class="my-4 font-weight-bold">
                         <a href="https://www.fic.udc.es/es/muei" rel="noopener noreferrer" target="_blank">
-                            Master Degree in Computer Science
+                            <strong>Master Degree in Computer Science</strong>
                         </a>
                     </h4>
                     <p class="blue-grey-text">To be able to acquire more knowledge and competencies.</p>
@@ -218,7 +218,7 @@
                     <h4 class="my-4 font-weight-bold">
                         <a href="http://www.aguarda.es/servizos-municipais/educacion/conservatorio/" rel="noopener noreferrer"
                            target="_blank">
-                            Elementary Degree of Music
+                            <strong>Elementary Degree of Music</strong>
                         </a>
                     </h4>
                     <p class="blue-grey-text">The first 4 years of the musical career. I am specialized in piano.</p>
