--- a/index.html
+++ b/index.html
@@ -655,6 +655,23 @@
                 </div>
                 <!--Grid column-->
 
+                <!--Grid column-->
+                <div class="col-lg-4 col-md-4 mb-4">
+
+                    <a href="pdf/certificates/Udemy-React.pdf" rel="noopener noreferrer" target="_blank">
+                        <span aria-hidden="true" class="fas fa-certificate fa-5x orange-text"></span>
+                    </a>
+
+                    <h4 class="my-4 font-weight-bold">
+                        <a href="https://indra.udemy.com/course/react-the-complete-guide-incl-redux/" rel="noopener noreferrer"
+                           target="_blank">
+                            <strong>React - The Complete Guide (incl Hooks, React Router, Redux)</strong>
+                        </a>
+                    </h4>
+
+                </div>
+                <!--Grid column-->
+
             </div>
             <!--Grid row-->
         </section>
@@ -771,6 +788,32 @@
                             Duffy</a>
                         </dt>
                     </dl>
+
+                </div>
+                <!--Grid column-->
+
+                <!--Grid column-->
+                <div class="col-lg-4 col-md-4 mb-4">
+
+                    <span aria-hidden="true" class="fas fa-book-open fa-5x orange-text"></span>
+
+                    <h4 class="my-4 font-weight-bold">
+                        <a href="https://indra.udemy.com/course/react-the-complete-guide-incl-redux/" rel="noopener noreferrer"
+                           target="_blank">
+                            <strong>React - The Complete Guide (incl Hooks, React Router, Redux)</strong>
+                        </a>
+                    </h4>
+
+                    <dl>
+                        <dt>
+                            Instructor: <a href="https://www.linkedin.com/in/maximilian-schwarzm%C3%BCller-66b152a5/"
+                                           rel="noopener noreferrer" target="_blank">Maximilian Schwarzmüller</a>
+                        </dt>
+                    </dl>
+                    <dd>
+                        Graduation certificate ID: <a href="https://www.udemy.com/certificate/UC-f78eff91-7d6b-4383-80ab-aaee2b13ce9a/"
+                                                      rel="noopener noreferrer" target="_blank"> UC-f78eff91-7d6b-4383-80ab-aaee2b13ce9a</a>
+                    </dd>
 
                 </div>
                 <!--Grid column-->
